# solana

./: .gitignore  .gitmodules  Anchor.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: solana-programs.yml
circuits/: README.md  package-lock.json  package.json  stealth_attestation.circom
circuits/v2/: package-lock.json  package.json  stealth_reputation.circom
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/circuits/v2/: stealth_reputation.wasm
frontend/public/pkg/: cryptography.d.ts  cryptography.js  cryptography_bg.wasm.d.ts
frontend/scripts/: check-setup-message.mjs
frontend/src/: App.tsx  main.tsx  polyfills.ts  wasm.d.ts
frontend/src/components/: AttestationManager.tsx  ClaimModal.tsx  DashboardView.tsx  EthConnectButton.tsx  Footer.tsx  IssueTraitModal.tsx  LandingPage.tsx  LandingView.tsx  Layout.tsx  ManageView.tsx  ModalShell.tsx  MyTraitsView.tsx  PayPage.tsx  PrivateBalanceView.tsx  ProofGeneratorModal.tsx  ProtocolLogPanel.tsx  ProtocolStepper.tsx  ProveTraitModal.tsx  PsrChainToggle.tsx  ReceiveView.tsx  RegistrationWizard.tsx  SchemaStudio.tsx  SendView.tsx  SetupView.tsx  TransactionHistoryView.tsx
frontend/src/context/: KeysContext.tsx  SolanaWalletProviders.tsx  ToastContext.tsx
frontend/src/contracts/: config.ts  contract-config.ts  deployed-addresses.json  deployedAddresses.ts  reputation-addresses.json  reputationAddresses.ts
frontend/src/contracts/abis/: Groth16Verifier.json  MockERC20.json  OpaqueReputationVerifier.json  StealthAddressAnnouncer.json  StealthMetaAddressRegistry.json  attestation_engine_v2.json  schema_registry.json
frontend/src/hooks/: useOpaqueWasm.ts  useRegistrationStatus.ts  useScanner.ts  useWallet.ts
frontend/src/lib/: attestationV2.ts  contracts.ts  ens.ts  format.ts  onboardingTour.ts  opaqueCache.ts  readNativeBalance.ts  registry.ts  reputationProver.ts  schema.ts  signatureSession.ts  stealth.ts  stealthLifecycle.index.ts  stealthLifecycle.ts  tokens.ts
frontend/src/opaque/: OpaqueProviders.tsx  config.ts  sendOnly.ts  store.ts  useOpaqueSession.ts  wagmi.ts
frontend/src/store/: schemaStore.ts
frontend/src/types/: circomlibjs.d.ts
programs/attestation-engine-v2/: Cargo.toml
programs/attestation-engine-v2/src/: lib.rs
programs/conditional-disclosure/: Cargo.toml
programs/conditional-disclosure/src/: lib.rs
programs/groth16-verifier/: Cargo.toml
programs/groth16-verifier/src/: lib.rs
programs/groth16-verifier/tests/: v2_fixture.rs
programs/ons-mirror/: Cargo.toml
programs/ons-mirror/src/: lib.rs
programs/ons-registration/: Cargo.toml
programs/ons-registration/src/: lib.rs
programs/opaque-privacy-pool/: Cargo.toml
programs/opaque-privacy-pool/src/: lib.rs
programs/relayer-registry/: Cargo.toml
programs/relayer-registry/src/: lib.rs
programs/reputation-verifier/: Cargo.toml
programs/reputation-verifier/src/: lib.rs
programs/schema-registry/: Cargo.toml
programs/schema-registry/src/: lib.rs
programs/stealth-announcer/: Cargo.toml
programs/stealth-announcer/src/: lib.rs
programs/stealth-registry/: Cargo.toml
programs/stealth-registry/src/: lib.rs
programs/uab-receiver/: Cargo.toml
programs/uab-receiver/src/: lib.rs
scanner/: Cargo.toml
scanner/src/: attestation.rs  lib.rs  main.rs  merkle.rs  scanner.rs
scripts/: e2e-disclosure.mjs  e2e-privacy-pool.mjs  generate-deployments.mjs  generate-idls.sh  generate-ons-fixtures.mjs  generate-vaa-fixture.mjs
tests/: conditional-disclosure.ts  helpers.ts  integration.ts  ons.ts  privacy-pool.ts  relayer-market.ts
tests/fixtures/: ons-claim-confirmed.json  ons-claim-expired.json  ons-claim-lost.json  ons-claim-pending.json  ons-mirror-confirmed.json  ons-mirror-lost.json  ons-vaa-revoke.json  ons-vaa-stale.json  ons-vaa-upsert.json  posted-vaa.json
