[workspace]
members = [
    "programs/stealth-registry",
    "programs/stealth-announcer",
    "programs/groth16-verifier",
    "programs/reputation-verifier",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
