[package]
name = "cryptography"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
k256 = { version = "0.13", features = ["ecdh", "arithmetic"] }
sha3 = "0.10"
alloy-primitives = "1.5"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
hex = "0.4"
