[package]
name = "groth16-verifier"
version = "0.1.0"
description = "Groth16 ZK-SNARK verifier for Opaque Protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "groth16_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32"
solana-bn254 = "2.2"
