[package]
name = "ons-registration"
version = "0.1.0"
description = "Opaque Name Service Solana-originated claims for Opaque Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ons_registration"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32"
solana-keccak-hasher = "3"
