[package]
name = "relayer-registry"
version = "0.1.0"
description = "Relayer market stake registry and gas-private job escrow for Opaque Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "relayer_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32", features = ["init-if-needed"] }
solana-keccak-hasher = "3"
