[package]
name = "stealth-registry"
version = "0.1.0"
description = "Stealth Meta-Address Registry for Opaque Protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stealth_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32", features = ["init-if-needed"] }
